@@ -103,3 +103,4 @@
 <{if $icmspersistable_delete_confirm}>
 <{$icmspersistable_delete_confirm}>
 <{/if}>
+<{if $lang_nocontent}><div id="profile-nocontent" class="outer"><p class="odd"><{$lang_nocontent}></p></div><{/if}>
